Prepare StrataSnake for browser deployment